--- a/src/presentation/web/client/Layout/AuthenticatedLayout.razor.css
+++ b/src/presentation/web/client/Layout/AuthenticatedLayout.razor.css
@@ -1,4 +1,4 @@
-#blazor-error-ui {
+﻿#blazor-error-ui {
     color-scheme: light only;
     background: lightyellow;
     bottom: 0;
@@ -12,9 +12,9 @@
     z-index: 1000;
 }
 
-    #blazor-error-ui .dismiss {
-        cursor: pointer;
-        position: absolute;
-        right: 0.75rem;
-        top: 0.5rem;
-    }
+#blazor-error-ui .dismiss {
+    cursor: pointer;
+    position: absolute;
+    right: 0.75rem;
+    top: 0.5rem;
+}
