--- a/src/presentation/web/client/Pages/Home.razor
+++ b/src/presentation/web/client/Pages/Home.razor
@@ -2,6 +2,10 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<TriContainer>
 
-Welcome to your new app.
+    <h1>Hello, world!</h1>
+
+    Welcome to your new app.
+    
+</TriContainer>
