--- a/src/presentation/web/server/Components/App.razor
+++ b/src/presentation/web/server/Components/App.razor
@@ -1,21 +1,27 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+    <head>
+        <title>TriPower</title>
+        <meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <base href="/"/>
+        
+        <LinkPreload/>
+        
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+        <link href="@Assets["_content/MudBlazor/MudBlazor.min.css"]" rel="stylesheet" />
+        
+        <link rel="stylesheet" href="@Assets["app.css"]"/>
+        <link rel="stylesheet" href="@Assets["TriPower.Presentation.Web.styles.css"]"/>
+        
+        <ImportMap/>
+        <HeadOutlet @rendermode="InteractiveAuto"/>
+    </head>
 
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <base href="/" />
-    <LinkPreload />
-    <link rel="stylesheet" href="@Assets["app.css"]" />
-    <link rel="stylesheet" href="@Assets["TriPower.Presentation.Web.styles.css"]" />
-    <ImportMap />
-    <HeadOutlet @rendermode="InteractiveAuto" />
-</head>
-
-<body>
-    <Routes @rendermode="InteractiveAuto" />
-    <ReconnectModal />
-    <script src="@Assets["_framework/blazor.web.js"]"></script>
-</body>
-
+    <body>
+        <Routes @rendermode="InteractiveAuto" />
+        <ReconnectModal />
+        <script src="@Assets["_framework/blazor.web.js"]"></script>
+        <script src="@Assets["_content/MudBlazor/MudBlazor.min.js"]"></script>
+    </body>
 </html>
