--- a/src/presentation/web/server/Components/_Imports.razor
+++ b/src/presentation/web/server/Components/_Imports.razor
@@ -1,11 +1,15 @@
 ﻿@using System.Net.Http
 @using System.Net.Http.Json
+
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
+
+@using MudBlazor
+
 @using TriPower.Presentation.Web
 @using TriPower.Presentation.Web.Client
 @using TriPower.Presentation.Web.Client.Layout
