--- a/src/kernel/client/Components/Forms/TriEditForm.razor
+++ b/src/kernel/client/Components/Forms/TriEditForm.razor
@@ -16,7 +16,9 @@
     
     <BdkFluentValidator Validator="Validator" />
     
-    @ChildContent
+    <TriStack>
+        @ChildContent
+    </TriStack>
     
 </EditForm>
 
