progride com varias melhorias

--- a/src/presentation/web/client/Layout/AnonymousLayout.razor
+++ b/src/presentation/web/client/Layout/AnonymousLayout.razor
@@ -5,6 +5,8 @@
 <MudDialogProvider />
 <MudSnackbarProvider />
 
+<TriUiUtilsProvider/>
+
 <MudLayout>
     <MudAppBar Elevation="1">
         <MudText Typo="Typo.h5" Class="ml-3">TriPower</MudText>
