--- a/src/presentation/web/client/Layout/AuthenticatedLayout.razor
+++ b/src/presentation/web/client/Layout/AuthenticatedLayout.razor
@@ -5,6 +5,8 @@
 <MudDialogProvider />
 <MudSnackbarProvider />
 
+<TriUiUtilsProvider/>
+
 <MudLayout>
     <MudAppBar Elevation="1">
         <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@DrawerToggle" />
