--- a/src/presentation/web/client/Pages/Accounts/AccountRegisterPage.razor
+++ b/src/presentation/web/client/Pages/Accounts/AccountRegisterPage.razor
@@ -2,14 +2,15 @@
 
 <TriPage Title="Sign Up">
     <Body>
-    
-    <TriEditForm Model="_request" Validator="_validator" >
+    <TriEditForm FormName="account-register" Model="Request" Validator="Validator" OnValidSubmit="HandleValidSubmitAsync">
         
         <TriSection Label="Suas informações">
             
             <Content>
-                <TriTextField @bind-Value="_request.FirstName" Label="Nome" />
-                <TriTextField @bind-Value="_request.LastName" Label="Sobrenome" />
+                <TriGrid ColsMd="2" ColsLg="2" ColsXl="3">
+                    <TriTextField @bind-Value="Request.FirstName" Label="Nome" />
+                    <TriTextField @bind-Value="Request.LastName" Label="Sobrenome" />
+                </TriGrid>
             </Content>
             
         </TriSection>
@@ -17,11 +18,19 @@
         <TriSection Label="Usuário">
             
             <Content>
-                <TriTextField @bind-Value="_request.Email" Label="E-mail" />
-                <TriTextField @bind-Value="_request.Password" Label="Senha" InputType="InputType.Password" />
-                <TriTextField @bind-Value="_request.ConfirmPassword" Label="Confirmação de Senha" InputType="InputType.Password" />
+                <TriGrid ColsMd="2" ColsLg="2" ColsXl="3">
+                    <TriTextField @bind-Value="Request.Email" Label="E-mail" />
+                    <TriTextField @bind-Value="Request.Password" Label="Senha" InputType="InputType.Password" />
+                    <TriTextField @bind-Value="Request.ConfirmPassword" Label="Confirmação de Senha" InputType="InputType.Password" />
+                </TriGrid>
             </Content>
             
+        </TriSection>
+        
+        <TriSection Label="Validações">
+            <Content>
+                <ValidationSummary/>
+            </Content>
         </TriSection>
         
         
