faz login funcionar

--- a/src/presentation/web/client/Layout/AnonymousLayout.razor
+++ b/src/presentation/web/client/Layout/AnonymousLayout.razor
@@ -14,12 +14,12 @@
         
         <MudButton 
             Color="Color.Inherit" Variant="Variant.Outlined" StartIcon="@Icons.Material.Filled.Login"
-            Href="/account/register" class="mr-4">
+            Href="/account/login" Class="mr-4" Size="Size.Small">
             Sign In
         </MudButton>
         <MudButton 
             Color="Color.Inherit" Variant="Variant.Outlined" StartIcon="@Icons.Material.Filled.Create"
-            Href="/account/register">
+            Href="/account/register" Size="Size.Small">
             Sign Up
         </MudButton>
     </MudAppBar>
