--- a/src/presentation/web/client/Layout/AuthenticatedLayout.razor
+++ b/src/presentation/web/client/Layout/AuthenticatedLayout.razor
@@ -12,6 +12,19 @@
         <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@DrawerToggle" />
         <MudText Typo="Typo.h5" Class="ml-3">TriPower</MudText>
         <MudSpacer />
+        
+        <AuthorizeView>
+            <Authorized>
+                <MudText Class="ml-3">@context.User.Identity?.Name</MudText>
+            </Authorized>
+            <Authorizing>
+                <MudText Class="ml-3">Authorizing...</MudText>
+            </Authorizing>
+            <NotAuthorized>
+                <MudText Class="ml-3">Not Authorized</MudText>
+            </NotAuthorized>
+        </AuthorizeView>
+        
         <MudIconButton Icon="@Icons.Material.Filled.MoreVert" Color="Color.Inherit" Edge="Edge.End" />
     </MudAppBar>
     <MudDrawer @bind-Open="DrawerOpen" ClipMode="DrawerClipMode.Always" Elevation="2">
