--- a/src/presentation/web/client/Pages/Dashboards/OverviewDashboardPage.razor
+++ b/src/presentation/web/client/Pages/Dashboards/OverviewDashboardPage.razor
@@ -1,8 +1,9 @@
 ﻿@page "/overview"
 @layout AuthenticatedLayout
+@attribute [Authorize]
 
 <TriPage Title="Overview">
     <Body>
-        <h3>OverviewDashboardPage</h3>
+        <h3>Overview Dashboard </h3>
     </Body>
 </TriPage>
