--- a/src/kernel/client/Components/Contents/TriSection.razor
+++ b/src/kernel/client/Components/Contents/TriSection.razor
@@ -3,9 +3,9 @@
 
 <MudPaper Class="tw:!px-6 tw:!py-6" Elevation="0" Outlined>
     
-    <TriStack Gap="TriGap.None">
+    <TriStack Gap="TriGap.Small">
         <TriStack Row Justify="TriJustify.SpaceBetween" Align="TriAlign.End" Wrap="TriWrap.Wrap">
-            <MudText Typo="Typo.h5">@Label</MudText>
+            <MudText Typo="Typo.h6">@Label</MudText>
             <div>
                 @CommandBar
             </div>
