--- a/src/kernel/client/Components/Contents/TriCommandBar.razor
+++ b/src/kernel/client/Components/Contents/TriCommandBar.razor
@@ -7,12 +7,14 @@
     
     <TriStack Row Align="TriAlign.Center" Justify="TriJustify.SpaceBetween">
         <TriStack Row Justify="TriJustify.SpaceBetween" Align="TriAlign.End" Wrap="TriWrap.Wrap">
-            <MudIconButton 
-                Icon="@Icons.Material.Filled.ArrowBackIos"
-                Color="Color.Primary"
-                Variant="Variant.Text"
-                Href="@BackLink"
-                ButtonType="ButtonType.Button" />
+            <div>
+                <MudIconButton
+                    Icon="@Icons.Material.Filled.ChevronLeft"
+                    Color="Color.Primary"
+                    Variant="Variant.Text"
+                    Href="@BackLink"
+                    ButtonType="ButtonType.Button"/>
+            </div>
         </TriStack>
         
         <TriStack Row Justify="TriJustify.SpaceBetween" Align="TriAlign.Center" Wrap="TriWrap.Wrap">
