--- a/src/presentation/web/client/Layout/NavigationBar.razor
+++ b/src/presentation/web/client/Layout/NavigationBar.razor
@@ -1,8 +1,9 @@
 ﻿<MudPaper Width="250px" Class="py-4" Elevation="0">
     <MudNavMenu>
-        <MudNavLink Href="/">Dashboard</MudNavLink>
+        <MudNavLink Href="/overview">Dashboard</MudNavLink>
         <MudNavLink Href="/projects">Projetos</MudNavLink>
         <MudNavLink Href="/disjuntores">Disjuntores</MudNavLink>
+        <MudNavLink Href="/cables">Fios/Cabos</MudNavLink>
         
         <MudNavGroup Title="Settings">
             <MudNavLink Href="/users">Users</MudNavLink>
