progride adição de circuitos

--- a/src/presentation/web/client/Pages/Projects/CreateProjectPage.razor
+++ b/src/presentation/web/client/Pages/Projects/CreateProjectPage.razor
@@ -18,7 +18,7 @@
         <TriSection Label="Alimentação">
             <Content>
                 <TriGrid ColsMd="2">
-                    <TriEnumSelectField TEnum="VoltageType" Label="Tensão" @bind-Value="Request.Voltage"/>
+                    <TriEnumSelectField TEnum="VoltageType" Label="Tensão" @bind-Value="Request.VoltageType"/>
                     <TriEnumSelectField TEnum="PhaseType" Label="Fases" @bind-Value="Request.Phases"/>
                 </TriGrid>
             </Content>
